--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,8 @@ button{
   .card{
     display: flex;
     flex-direction: row;
-    max-width: 600px;
+    max-width: 500px;
+    max-height: 600px;
   }
   .card__figure{
     width: 50%;
@@ -110,6 +111,8 @@ button{
     content: url('../images/image-product-desktop.jpg');
     height: 100%;
     object-fit: cover;
+    background-position: center;
+    background-position: center;
   }
   .card__info{
     width: 50%;
